daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N14_bad_auth_block_shape/auth_block.cbor.hex
a300a100496e6f742d617272617901f602f6
